--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 <h1>Pixel Circle</h1>
 
+<p>Generate and export pixel art circles with ease!</p>
+
+<hr>
+
 <div class="options">
     <div class="input-field">
         <label for="a-input">Dimensions:</label>
@@ -30,6 +34,11 @@
         <label for="outline-color-input">Outline Color:</label>
         <input id="outline-color-input" type="color" value="#000000">
     </div>
+</div>
+
+<div class="options">
+    <label for="overlay-check">Overlay Real Circle:</label>
+    <input id="overlay-check" type="checkbox">
 </div>
 
 <div class="circle-image">
