github pages isn't in sync

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <canvas height="1000" id="overlay-circle" width="1000"></canvas>
 </div>
 
-<button id="button">Save</button>
+<button id="button">Save Image</button>
 
 <script src="script.js"></script>
 </body>
